--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -13,11 +13,15 @@ danelli:
   #EG BCrypt::Password.create ... cost, speed vs security factors into cost setting.
   #Relates to the user model's digest method.
   admin: true
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 brucelee:
   name: Bruce Lee
   email: brucelee@sample.com
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 #We can use embedded Ruby inside of fixtures
 <% 30.times do |n| %>
