--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -30,6 +30,13 @@ brucelee:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+mushashi:
+  name: Miamoto Mushashi
+  email: mushashi@example.com
+  password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
+
 #We can use embedded Ruby inside of fixtures
 <% 30.times do |n| %>
 user_<%= n %>:
